refactor(course): Course DTO 레코드 전환 및 API 타입 안전성 강화
- CourseUpdateRequest, CourseRecommendationResponse를 Record로 전환하여 불변 객체 사용
- CourseController 및 CourseService의 조회 API 파라미터를 String에서 CourseType Enum으로 변경하여 타입 안전성 확보 (프론트엔드 통신 스펙 유지)
- CourseService 내 DTO Getter 호출 방식 수정 (get 접두사 제거) 및 관련 로직 정리
- 추천 코스 매핑 로직을 CourseRecommendationResponse::from Factory Method로 통일 및 오버로딩 적용